# opay

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  OPERATIONS.md  README.md  RELEASE.md  config.example.toml  docker-compose.rust.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
backend-rs/migrations/: 0002_core_schema.sql
backend-rs/src/: channel.rs  config.rs  db.rs  error.rs  main.rs  payment_provider.rs  platform.rs  response.rs  sub2api.rs  subscription_plan.rs  system_config.rs
backend-rs/src/http/: channels.rs  common.rs  easy_pay_notify.rs  health.rs  mod.rs  orders.rs  stripe_webhook.rs  subscription_plans.rs  subscriptions.rs  user.rs
backend-rs/src/http/admin/: channels.rs  config.rs  dashboard.rs  env_defaults.rs  mod.rs  orders.rs  refund.rs  sub2api.rs  subscription_plans.rs  subscriptions.rs  user_balance.rs
backend-rs/src/order/: audit.rs  codegen.rs  mod.rs  repository.rs  service.rs  status.rs
examples/: concurrent_write_smoke.rs  seed_admin_orders.rs
frontend/: .dev.vars.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend-cf/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
migrations/: 0001_system_configs.sql
scripts/: admin_order_actions_smoke.py  browser_smoke_suite.js  configure_local_easypay_mock.py  configure_local_stripe_mock.py  easypay_notify_completion_smoke.py  local_smoke_mocks.py  (+5 more)
src/: admin_auth.rs  (+10 more)
(+77 files in other folders)
